// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`classy-ui should allow arguments to group: should allow arguments to group 1`] = `

import { group } from 'classy-ui'

group('color-blue', 'color-red')

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
('group color-blue color-red ');

_addClasses([]);


`;

exports[`classy-ui should allow group with conditional after it: should allow group with conditional after it 1`] = `

import { c, group } from 'classy-ui'

c(group(), { 'color-red': true })

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
(true ? 'color-red ' : '') + 'group ';

_addClasses(['color-red', '.color-red{color:red;}']);


`;

exports[`classy-ui should allow pseudo decorators as base: should allow pseudo decorators as base 1`] = `

import { c, hover } from 'classy-ui'

hover('color-red')

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
('hover:color-red ');

_addClasses(['hover:color-red', '.hover\\\\:color-red:hover{color:red;}']);


`;

exports[`classy-ui should convert both breakpoints and pseudos: should convert both breakpoints and pseudos 1`] = `

import { c, hover, md } from 'classy-ui'

c(md(hover('color-red')))

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
('hover:md:color-red ');

_addClasses(['hover:md:color-red', '@media (max-width:768px) {.hover\\\\:md\\\\:color-red:hover{color:red;}}']);


`;

exports[`classy-ui should convert breakpoints: should convert breakpoints 1`] = `

import { c, md } from 'classy-ui'

c(md('color-red'))

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
('md:color-red ');

_addClasses(['md:color-red', '@media (max-width:768px) {.md\\\\:color-red{color:red;}}']);


`;

exports[`classy-ui should convert complex compositions: should convert complex compositions 1`] = `

import { c, hover, md, lg } from 'classy-ui'

c('color-blue', md(lg(hover('color-red'))))

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
('color-blue hover:lg:md:color-red ');

_addClasses([
  'color-blue',
  '.color-blue{color:blue;}',
  'hover:lg:md:color-red',
  '@media (max-width:1024px) {.hover\\\\:lg\\\\:md\\\\:color-red:hover{color:red;}}@media (max-width:768px) {.hover\\\\:lg\\\\:md\\\\:color-red:hover{color:red;}}',
]);


`;

exports[`classy-ui should convert pseudos: should convert pseudos 1`] = `

import { c, hover } from 'classy-ui'

c(hover('color-red'))

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
('hover:color-red ');

_addClasses(['hover:color-red', '.hover\\\\:color-red:hover{color:red;}']);


`;

exports[`classy-ui should convert simple: should convert simple 1`] = `

import { c } from 'classy-ui'

c('color-red')

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
('color-red ');

_addClasses(['color-red', '.color-red{color:red;}']);


`;

exports[`classy-ui should fix specifiy issue in dynamic composition: should fix specifiy issue in dynamic composition 1`] = `

import { c} from 'classy-ui'
const compose = c('color-blue', 'bg-blue')
const moreCompose = c('color-green', 'bg-green')

c(compose, moreCompose, 'color-red', 'bg-red')

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
import { fixSpecificity as _fixSpecificity } from 'classy-ui/runtime';
const compose = 'color-blue bg-blue ';
const moreCompose = 'color-green bg-green ';

_fixSpecificity(compose + moreCompose + 'color-red bg-red ');

_addClasses([
  'color-blue',
  '.color-blue{color:blue;}',
  'bg-blue',
  '.bg-blue{background-color:blue;}',
  'color-green',
  '.color-green{color:var(--colors-green);}:root{--colors-green:green;}\\n.themes-dark{--colors-green:yellow;}',
  'bg-green',
  '.bg-green{background-color:var(--colors-green);}:root{--colors-green:background-color:green;}\\n.themes-dark{--colors-green:yellow;}',
  'color-red',
  '.color-red{color:red;}',
  'bg-red',
  '.bg-red{background-color:red;}',
]);


`;

exports[`classy-ui should give group a classname: should give group a classname 1`] = `

import { c, group } from 'classy-ui'

group()

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
('group ');

_addClasses([]);


`;

exports[`classy-ui should handle complex dynamic composition: should handle complex dynamic composition 1`] = `

import { c, group } from 'classy-ui'

c(group(), { 'color-red': true }, 'bg-red', { 'block': true }, 'inline-block')

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
(true ? 'color-red ' : '') + (true ? 'block ' : '') + 'group bg-red inline-block ';

_addClasses([
  'color-red',
  '.color-red{color:red;}',
  'bg-red',
  '.bg-red{background-color:red;}',
  'block',
  '.block{display:block;}',
  'inline-block',
  '.inline-block{display:inline-block;}',
]);


`;

exports[`classy-ui should handle dynamic calls to some function: should handle dynamic calls to some function 1`] = `

import { c, group } from 'classy-ui'

c(group(), someFunction())

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
someFunction() + 'group ';

_addClasses([]);


`;

exports[`classy-ui should not throw when using group inside c call: should not throw when using group inside c call 1`] = `

import { c, group } from 'classy-ui'

c(group())

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
('group ');

_addClasses([]);


`;

exports[`classy-ui should throw when nesting c call: should throw when nesting c call 1`] = `

import { c } from 'classy-ui'

c(c('color-blue'))

      ↓ ↓ ↓ ↓ ↓ ↓

SyntaxError: unknown: Duplicating c is not allowed.
[0m [90m 1 | [39m[36mimport[39m { c } from [32m'classy-ui'[39m[0m
[0m [90m 2 | [39m[0m
[0m[31m[1m>[22m[39m[90m 3 | [39mc(c([32m'color-blue'[39m))[0m
[0m [90m   | [39m  [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[0m

`;
